# Easy-Key

host/: Cargo.toml
host/src/: lib.rs  main.rs  proof.rs
methods/: Cargo.toml
methods/guest/: Cargo.toml
methods/guest/src/: main.rs  sms.rs
