[package]
name = "host"
version = "0.1.0"
edition = "2021"

[dependencies]
EasyKey = { path = "../methods" }
risc0-zkvm = { version = "0.21.0" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = "1.0"
actix-rt = "1.1.0"
actix-web = "4.5.1"
actix-cors = "0.7.0"
env_logger = "0.7.1"
anyhow = "1.0"
tokio = { version = "1.0", features = ["full"] }
