[package]
name = "easykeygen"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
# If you want to try (experimental) std support, add `features = [ "std" ]` to risc0-zkvm
risc0-zkvm = { version = "0.21.0", default-features = false, features = ["std"] }
k256 = { version = "0.13.3", features = ["ecdsa"] }
hex-literal = "0.3"
hex = "0.4"
sha2 = "0.10"
sha3 = "0.10" 
rand_core = "0.6.4"
dotenv="0.15.0"
serde = { version = "1.0.152", features = ["derive"] }
serde_derive = "1.0.152"
serde_json = "1.0.91"
http="1.1.0"
hyper="1.3.1"